# TemplatePackage

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
TemplatePackage/: TemplateProcessor.hxx
share/: example.py  example.xml
src/: TemplateProcessor.cxx
